# aleo-dcp

./: .gitattributes  .gitignore  NOTES.md  README.md  TESTS.md  TODO.md
development/: .env.example  build.sh  deploy.sh  test.sh
examples/: marketplace.leo
programs/adcp_private_states/: README.md  program.json
programs/adcp_public_states/: README.md  program.json
programs/data_custody_protocol/: README.md  program.json
programs/dcp_beaver_intermediaries/: program.json
programs/dcp_beaver_triples/: program.json
programs/dcp_core_protocol/: README.md  program.json
programs/dcp_destination_shares/: program.json
programs/dcp_fee_management/: program.json
programs/dcp_hash_custody_offchain/: program.json
programs/dcp_open_requests/: program.json
programs/dcp_private_states/: README.md  program.json
programs/dcp_public_states/: README.md  program.json
programs/dcp_reconstruct_secret/: README.md  program.json
programs/dcp_reconstruct_secret_offchain/: program.json
programs/dcp_reconstruct_secret_public/: program.json
programs/dcp_validator_fee/: program.json
programs/dcp_validator_shares/: program.json
programs/dcp_withdraw_requests/: program.json
programs/protocol_core/: README.md  program.json
programs/protocol_transfers/: README.md  program.json
programs/test/: program.json
reconstruct_secret/: README.md
reconstruct_secret_dynamic/: README.md
secret_custody_protocol/: README.md  program.json
utils/snarkvm-decode-group-to-scalar/: Cargo.toml
utils/snarkvm-decode-group-to-scalar/src/: main.rs
validator/: main.js
(+73 files in other folders)
